<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.3.5</version>
		<relativePath/>
	</parent>

	<groupId>ecommerce.app</groupId>
	<artifactId>ecommerce-app-parent</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>ecommerce-app-parent</name>
	<description>E-commerce: Products Service + Inventory Service</description>

	<modules>
		<module>ecommerce-jsonapi-model</module>
		<module>products-service</module>
		<module>inventory-service</module>
	</modules>

	<properties>
		<java.version>17</java.version>
		<resilience4j.version>2.2.0</resilience4j.version>
		<testcontainers.version>1.19.8</testcontainers.version>
		<sonar-maven-plugin.version>3.11.0.3922</sonar-maven-plugin.version>
		<!-- SonarQube: opcional; definir sonar.host.url y sonar.token (o sonar.login) para enviar análisis -->
		<sonar.sourceEncoding>UTF-8</sonar.sourceEncoding>
		<sonar.exclusions>**/config/**,**/domain/**,**/*Application.java,**/application/port/**,**/application/model/**</sonar.exclusions>
		<sonar.coverage.jacoco.xmlReportPaths>products-service/target/site/jacoco/jacoco.xml,inventory-service/target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>io.github.resilience4j</groupId>
				<artifactId>resilience4j-spring-boot3</artifactId>
				<version>${resilience4j.version}</version>
			</dependency>
			<dependency>
				<groupId>ecommerce.app</groupId>
				<artifactId>ecommerce-jsonapi-model</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>ecommerce.app</groupId>
				<artifactId>products-service</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>ecommerce.app</groupId>
				<artifactId>inventory-service</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.testcontainers</groupId>
				<artifactId>junit-jupiter</artifactId>
				<version>${testcontainers.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.testcontainers</groupId>
				<artifactId>postgresql</artifactId>
				<version>${testcontainers.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>io.github.cdimascio</groupId>
				<artifactId>dotenv-java</artifactId>
				<version>3.0.0</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>0.8.14</version>
					<executions>
						<execution>
							<id>prepare-agent</id>
							<goals>
								<goal>prepare-agent</goal>
							</goals>
							<phase>initialize</phase>
							<configuration>
								<propertyName>surefireArgLine</propertyName>
								<!-- Evitar MethodTooLargeException al instrumentar HtmlUnit (E2E); no aporta a cobertura de nuestro código -->
								<excludes>
									<exclude>com.gargoylesoftware.**</exclude>
									<exclude>net.sourceforge.htmlunit.**</exclude>
								</excludes>
							</configuration>
						</execution>
						<execution>
							<id>report</id>
							<phase>test</phase>
							<goals>
								<goal>report</goal>
							</goals>
							<configuration>
								<formats>
									<format>HTML</format>
									<format>XML</format>
								</formats>
							</configuration>
						</execution>
						<execution>
							<id>check</id>
							<phase>verify</phase>
							<goals>
								<goal>check</goal>
							</goals>
							<configuration>
								<rules>
									<rule>
										<element>BUNDLE</element>
										<limits>
											<limit>
												<counter>LINE</counter>
												<value>COVEREDRATIO</value>
												<minimum>0.70</minimum>
											</limit>
										</limits>
										<excludes>
											<exclude>**/*Application.class</exclude>
											<exclude>**/config/**</exclude>
											<exclude>**/infrastructure/**</exclude>
											<exclude>**/application/port/**</exclude>
											<exclude>**/application/model/**</exclude>
										</excludes>
									</rule>
								</rules>
							</configuration>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.sonarsource.scanner.maven</groupId>
					<artifactId>sonar-maven-plugin</artifactId>
					<version>${sonar-maven-plugin.version}</version>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>${surefireArgLine}</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>
</project>
